--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.11.11",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "react-icons": "^5.3.0"
-  },
+  "framer-motion": "^11.11.11",
+  "next": "15.0.3",
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0", 
+  "react-icons": "^5.3.0"
+},
+
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+  "@types/node": "^20",
+  "@types/react": "^18.0.0",
+  "@types/react-dom": "^18.0.0", 
+  "postcss": "^8",
+  "tailwindcss": "^3.4.1",
+  "typescript": "^5"
+}
+
 }
