--- a/package.json
+++ b/package.json
@@ -9,20 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-  "framer-motion": "^11.11.11",
-  "next": "15.0.3",
-  "react": "^18.2.0",
-  "react-dom": "^18.2.0", 
-  "react-icons": "^5.3.0"
-},
-
+    "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.11.11",
+    "next": "15.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0"
+  },
   "devDependencies": {
-  "@types/node": "^20",
-  "@types/react": "^18.0.0",
-  "@types/react-dom": "^18.0.0", 
-  "postcss": "^8",
-  "tailwindcss": "^3.4.1",
-  "typescript": "^5"
-}
-
+    "@types/node": "^20",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "postcss": "^8.4.48",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5"
+  }
 }
